gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: 192.168.154.128:5000/gitea
          securityContext:
            privileged: true
          volumeMounts:
            - name: storage
              mountPath: /data/git
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: gitea-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
